--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Website for testdrivendude",
   "main": "server.js",
   "scripts": {
-    "test": "npm test",
+    "test": "node test.js",
     "start": "node server.js"
   },
   "repository": {
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/bryzaguy/testdrivendude.com/issues"
   },
-  "homepage": "https://github.com/bryzaguy/testdrivendude.com"
+  "homepage": "https://github.com/bryzaguy/testdrivendude.com",
+  "devDependencies": {
+    "guardianjs": "^0.1.2"
+  }
 }
